--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="refresh" content="0;url=https://your-first-google-form-link.com">
     <script>
-        // JavaScript code to generate a random number (0 or 1) and redirect to one of the two Google Forms links
+        // JavaScript code to generate a random number (0, 1, or 2) and redirect to one of the three Google Forms links
         const randomIndex = Math.floor(Math.random() * 3);
         const googleFormsLinks = [
             'https://docs.google.com/forms/d/e/1FAIpQLSfRCWtfiFdZbBWr8liMSpeBUJ-X3zU65Ihp3UImCsd7ymmnJQ/viewform?usp=sf_link',
