--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="refresh" content="0;url=https://your-first-google-form-link.com">
     <script>
-        // JavaScript code to generate a random number (0, 1, or 2) and redirect to one of the three Google Forms links
-        const randomIndex = Math.floor(Math.random() * 8);
+        // JavaScript code to generate a random number and redirect to one of the Google Forms links
         const googleFormsLinks = [
             'https://drive.google.com/file/d/10xbKnuNH2EhOqG-z9t5sR_whiP3Bzdp_/view?usp=drive_link', 
-            'https://drive.google.com/file/d/1gGo4mpxRq8jSfViHJKChz_7sltC8DU-i/view?usp=drive_link, 
-            'https://drive.google.com/file/d/1p2RjqWs_IBtsNNwpjtVZoLTStwbKGNFn/view?usp=drive_link, 
-            'https://drive.google.com/file/d/1LFHgvYDSgmoLjtGSyVnuwqGTVIN3r2bf/view?usp=drive_link, 
-            'https://drive.google.com/file/d/1FIrADT1r1spHO27F4AJP1c58t-UwvcMC/view?usp=drive_link, 
-            'https://drive.google.com/file/d/1SJvLtLxUsRmYIxqAo9LQtn9tUqQXFDrZ/view?usp=drive_link, 
-            'https://drive.google.com/file/d/1_J10vvsV7zFKwejQXX8buyTu3Ecz5rVY/view?usp=drive_link, 
+            'https://drive.google.com/file/d/1gGo4mpxRq8jSfViHJKChz_7sltC8DU-i/view?usp=drive_link', 
+            'https://drive.google.com/file/d/1p2RjqWs_IBtsNNwpjtVZoLTStwbKGNFn/view?usp=drive_link', 
+            'https://drive.google.com/file/d/1LFHgvYDSgmoLjtGSyVnuwqGTVIN3r2bf/view?usp=drive_link', 
+            'https://drive.google.com/file/d/1FIrADT1r1spHO27F4AJP1c58t-UwvcMC/view?usp=drive_link', 
+            'https://drive.google.com/file/d/1SJvLtLxUsRmYIxqAo9LQtn9tUqQXFDrZ/view?usp=drive_link', 
+            'https://drive.google.com/file/d/1_J10vvsV7zFKwejQXX8buyTu3Ecz5rVY/view?usp=drive_link', 
             'https://drive.google.com/file/d/1p-Q6DqxDKGb4ti12Ut1kKMKvLPLvBIkn/view?usp=drive_link'
         ];
+        const randomIndex = Math.floor(Math.random() * googleFormsLinks.length);
         window.location.href = googleFormsLinks[randomIndex];
     </script>
 </head>
@@ -23,3 +23,4 @@
     <p>If you are not redirected, <a href="https://your-first-google-form-link.com">click here</a>.</p>
 </body>
 </html>
+
