--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0;url=https://your-first-google-form-link.com">
+    <meta http-equiv="refresh" content="0;url=https://your-first-image-link.com">
     <script>
-        // JavaScript code to generate a random number and redirect to one of the Google Forms links
-        const googleFormsLinks = [
+        // JavaScript code to generate a random number and redirect to one of the image links
+        const imageLinks = [
             'https://drive.google.com/file/d/10xbKnuNH2EhOqG-z9t5sR_whiP3Bzdp_/view?usp=drive_link', 
             'https://drive.google.com/file/d/1gGo4mpxRq8jSfViHJKChz_7sltC8DU-i/view?usp=drive_link', 
             'https://drive.google.com/file/d/1p2RjqWs_IBtsNNwpjtVZoLTStwbKGNFn/view?usp=drive_link', 
@@ -15,12 +15,12 @@
             'https://drive.google.com/file/d/1_J10vvsV7zFKwejQXX8buyTu3Ecz5rVY/view?usp=drive_link', 
             'https://drive.google.com/file/d/1p-Q6DqxDKGb4ti12Ut1kKMKvLPLvBIkn/view?usp=drive_link'
         ];
-        const randomIndex = Math.floor(Math.random() * googleFormsLinks.length);
-        window.location.href = googleFormsLinks[randomIndex];
+        const randomIndex = Math.floor(Math.random() * imageLinks.length);
+        window.location.href = imageLinks[randomIndex];
     </script>
 </head>
 <body>
-    <p>If you are not redirected, <a href="https://your-first-google-form-link.com">click here</a>.</p>
+    <p>If you are not redirected, <a href="https://your-first-image-link.com">click here</a>.</p>
 </body>
 </html>
 
